--- a/client/src/pages/RegisterPage/RegisterPage.scss
+++ b/client/src/pages/RegisterPage/RegisterPage.scss
@@ -214,7 +214,6 @@
     .register__password-toggle-icon {
       width: 24px;
       height: 24px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
       border-radius: 50%;
       background: linear-gradient(145deg, #e6e6e6, #ffffff);
       display: flex;
@@ -403,6 +402,7 @@
       &:hover {
         background: $primary-dark-blue;
         color: $neutral-white;
+        border: 1px solid $primary-pale-blue;
       }
 
       &::before {
